--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,8 @@
         "satooshi/php-coveralls": "0.6.1"
     },
     "autoload": {
-        "psr-0": {
-            "bjoernffm\\Spintax": ""
+        "psr-4": {
+            "bjoernffm\\Spintax\\": ""
         }
     }
 }
