--- a/composer.json
+++ b/composer.json
@@ -33,11 +33,10 @@
     },
     "require-dev": {
         "ext-xsl": "*",
-        "phpunit/phpunit": "3.7.29",
-        "phpmd/phpmd" : "1.5.0",
-        "sebastian/phpcpd": "2.0.0",
-        "squizlabs/php_codesniffer": "1.5.1",
-        "satooshi/php-coveralls": "0.6.1"
+        "phpunit/phpunit": "^8",
+        "squizlabs/php_codesniffer": "^3.4",
+        "sebastian/phpcpd": "^4.1",
+        "phpmd/phpmd": "^2.6"
     },
     "autoload": {
         "psr-4": {
