--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,18 @@
-##
-# This file is part of the ChillDev Spintax library.
-#
-# @author Rafal Wrzeszcz <rafal.wrzeszcz@wrzasq.pl>
-# @copyright 2014 © by Rafal Wrzeszcz - Wrzasq.pl.
-# @version 0.0.1
-# @since 0.0.1
-# @package ChillDev\Spintax
-##
+language: php
 
-#FIXME: https://github.com/travis-ci/travis-ci/issues/753
-
-language: "php"
+sudo: false
 
 php:
-    - "5.4"
-    - "5.5"
+  - 7.0
+  - 7.1
+  - 7.2
+  - 7.3
+  - 7.4
 
 before_script:
-    - "composer --dev --no-progress --optimize-autoloader install"
+  - composer install --no-interaction --prefer-source
 
-script: "make ci"
+script: make test
 
-after_script: "make coveralls"
+matrix:
+  fast_finish: true
