--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,4 @@
-##
-# This file is part of the ChillDev Spintax library.
-#
-# @author Rafał Wrzeszcz <rafal.wrzeszcz@wrzasq.pl>
-# @copyright 2014 © by Rafał Wrzeszcz - Wrzasq.pl.
-# @version 0.0.1
-# @since 0.0.1
-# @package ChillDev\Spintax
-##
-
-/.buildpath
-/.project
-/.settings
-/composer.lock
-/Resources/doc/coverage
-/output
+/artifacts
 /vendor
 /.phpunit.result.cache
+/.phpunit.cache
