--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
     "require-dev": {
         "phpunit/phpunit": "^11"
     },
+    "scripts": {
+        "test": "phpunit"
+    },
     "autoload": {
         "classmap": [
             "src/"
